<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tourguide.MainActivity">


    <ImageView
        android:id="@+id/main_activity_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/welcome_message"
            android:textColor="@color/whiteColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/know_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/know_more"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/explore_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="@color/exploreButtonColor"
        android:requiresFadingEdge="vertical"
        android:text="@string/explore_button"
        android:textColor="@color/whiteColor"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
